# FitbitGarminWeightSync

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml
.claude/: settings.local.json
src/fitbit_garmin_sync/: cli.py  config.py  fitbit_client.py  garmin_client.py  models.py  state.py  sync.py
tests/: test_models.py  test_sync.py
